:bug: Fix some bugs
- Intercept the `unitext://` protocol
- Fix the overflowed body
- Fix the narrow sash when reopen the splitview

--- a/src/renderer/styles/main.less
+++ b/src/renderer/styles/main.less
@@ -2,7 +2,6 @@
 
 body {
   margin: 0;
-  overflow-y: hidden;
 
   // DEV 校验样式粒度
   color: rgba(0, 0, 0, 0.65);
@@ -31,6 +30,11 @@ textarea {
 
 details > summary::-webkit-details-marker {
   display: none;
+}
+
+.monaco-aria-container {
+  width: 0;
+  height: 0;
 }
 
 /* Styles for components */
